--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=
+    , initial-scale=1.0"
+    />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Testing Git and GitHub</h1>
-</body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta iste quasi
+      hic distinctio repellat quae ea officiis, dolor natus, tempora aperiam
+      voluptate, at ab facere accusantium. Quibusdam sapiente perspiciatis
+      officiis!
+    </p>
+  </body>
 </html>
