--- a/index.html
+++ b/index.html
@@ -17,5 +17,12 @@
       voluptate, at ab facere accusantium. Quibusdam sapiente perspiciatis
       officiis!
     </p>
+    <h2>sports</h2>
+    <ul>
+        <li>cricket</li><br>
+        <li>Kabbadi</li><br>
+        <li>Hockey</li><br>
+        <li>Football</li>
+    </ul>
   </body>
 </html>
